@@ -6,9 +6,12 @@ import java.util.Objects;
 
 public class SlackOAuth2AccessToken extends OAuth2AccessToken {
 
+    private static final long serialVersionUID = 1L;
+
     private final String userAccessToken;
 
-    public SlackOAuth2AccessToken(String accessToken, String tokenType, Integer expiresIn, String refreshToken, String scope, String userAccessToken, String rawResponse) {
+    public SlackOAuth2AccessToken(String accessToken, String tokenType, Integer expiresIn, String refreshToken,
+            String scope, String userAccessToken, String rawResponse) {
         super(accessToken, tokenType, expiresIn, refreshToken, scope, rawResponse);
         this.userAccessToken = userAccessToken;
     }
@@ -41,5 +44,4 @@ public class SlackOAuth2AccessToken extends OAuth2AccessToken {
 
         return Objects.equals(userAccessToken, ((SlackOAuth2AccessToken) obj).getUserAccessToken());
     }
-
 }
